--- a/tutorial/source/contrib_funsor_intro_ii.ipynb
+++ b/tutorial/source/contrib_funsor_intro_ii.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `pyro.contrib.funsor`: a new backend for Pyro (pt. 2)"
+    "# `pyro.contrib.funsor`, a new backend for Pyro - Building inference algorithms (Part 2)"
    ]
   },
   {
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will be working with the following model throughout:"
+    "We will be working with the following model throughout. It is a discrete-state continuous-observation hidden Markov model with learnable transition and emission distributions that depend on a global random variable."
    ]
   },
   {
@@ -68,18 +68,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model(data):\n",
+    "data = [torch.tensor(1.)] * 10\n",
+    "\n",
+    "def model(data, verbose):\n",
     "\n",
     "    p = pyro.param(\"probs\", lambda: torch.rand((3, 3)), constraint=constraints.simplex)\n",
     "    locs_mean = pyro.param(\"locs_mean\", lambda: torch.ones((3,)))\n",
     "    locs = pyro.sample(\"locs\", dist.Normal(locs_mean, 1.).to_event(1))\n",
-    "    print(\"locs\", locs.shape)\n",
+    "    if verbose:\n",
+    "        print(\"locs.shape = {}\".format(locs.shape))\n",
     "\n",
     "    x = 0\n",
     "    for i in pyro.markov(range(len(data))):\n",
     "        x = pyro.sample(\"x{}\".format(i), dist.Categorical(p[x]), infer={\"enumerate\": \"parallel\"})\n",
-    "        print(\"x{}\".format(i), x.shape)\n",
+    "        if verbose:\n",
+    "            print(\"x{}.shape = \".format(i), x.shape)\n",
     "        pyro.sample(\"y{}\".format(i), dist.Normal(Vindex(locs)[..., x], 1.), obs=data[i])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can run `model` under the default Pyro backend and the new `contrib.funsor` backend with `pyroapi`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "locs.shape = torch.Size([3])\n",
+      "x0.shape =  torch.Size([])\n",
+      "x1.shape =  torch.Size([])\n",
+      "x2.shape =  torch.Size([])\n",
+      "x3.shape =  torch.Size([])\n",
+      "x4.shape =  torch.Size([])\n",
+      "x5.shape =  torch.Size([])\n",
+      "x6.shape =  torch.Size([])\n",
+      "x7.shape =  torch.Size([])\n",
+      "x8.shape =  torch.Size([])\n",
+      "x9.shape =  torch.Size([])\n",
+      "locs.shape = torch.Size([3])\n",
+      "x0.shape =  torch.Size([])\n",
+      "x1.shape =  torch.Size([])\n",
+      "x2.shape =  torch.Size([])\n",
+      "x3.shape =  torch.Size([])\n",
+      "x4.shape =  torch.Size([])\n",
+      "x5.shape =  torch.Size([])\n",
+      "x6.shape =  torch.Size([])\n",
+      "x7.shape =  torch.Size([])\n",
+      "x8.shape =  torch.Size([])\n",
+      "x9.shape =  torch.Size([])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# default backend: \"pyro\"\n",
+    "with pyroapi.pyro_backend(\"pyro\"):\n",
+    "    model(data, verbose=True)\n",
+    "    \n",
+    "# new backend: \"contrib.funsor\"\n",
+    "with pyroapi.pyro_backend(\"contrib.funsor\"):\n",
+    "    model(data, verbose=True)"
    ]
   },
   {
@@ -95,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,6 +169,8 @@
     "        raw_value = msg[\"fn\"].enumerate_support(expand=False)\n",
     "        \n",
     "        # Next we'll use pyro.to_funsor to indicate that this dimension is fresh.\n",
+    "        # This is guaranteed because we use msg['name'], the name of this pyro.sample site,\n",
+    "        # as the name for this positional dimension, and sample site names must be unique.\n",
     "        funsor_value = pyro.to_funsor(\n",
     "            raw_value,\n",
     "            output=funsor.bint(raw_value.shape[0]),\n",
@@ -143,7 +200,36 @@
     "funsor_value = funsor_dist.enumerate_support(expand=False)\n",
     "raw_value = pyro.to_data(funsor_value)\n",
     "```\n",
-    "Most of the more complete inference algorithms implemented in `pyro.contrib.funsor` follow this pattern, and we will see an example later in this tutorial."
+    "Most of the more complete inference algorithms implemented in `pyro.contrib.funsor` follow this pattern, and we will see an example later in this tutorial. Before we continue, let's see what effect `EnumMessenger` has on the shapes of random variables in our model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "locs.shape = torch.Size([3])\n",
+      "x0.shape =  torch.Size([3, 1, 1, 1, 1])\n",
+      "x1.shape =  torch.Size([3, 1, 1, 1, 1, 1])\n",
+      "x2.shape =  torch.Size([3, 1, 1, 1, 1])\n",
+      "x3.shape =  torch.Size([3, 1, 1, 1, 1, 1])\n",
+      "x4.shape =  torch.Size([3, 1, 1, 1, 1])\n",
+      "x5.shape =  torch.Size([3, 1, 1, 1, 1, 1])\n",
+      "x6.shape =  torch.Size([3, 1, 1, 1, 1])\n",
+      "x7.shape =  torch.Size([3, 1, 1, 1, 1, 1])\n",
+      "x8.shape =  torch.Size([3, 1, 1, 1, 1])\n",
+      "x9.shape =  torch.Size([3, 1, 1, 1, 1, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "with pyroapi.pyro_backend(\"contrib.funsor\"), \\\n",
+    "        EnumMessenger():\n",
+    "    model(data, True)"
    ]
   },
   {
@@ -159,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,18 +290,90 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Let's see what effect `VectorizeMessenger` has on the shapes of the values in `model`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "locs.shape = torch.Size([10, 1, 1, 1, 1, 3])\n",
+      "x0.shape =  torch.Size([])\n",
+      "x1.shape =  torch.Size([])\n",
+      "x2.shape =  torch.Size([])\n",
+      "x3.shape =  torch.Size([])\n",
+      "x4.shape =  torch.Size([])\n",
+      "x5.shape =  torch.Size([])\n",
+      "x6.shape =  torch.Size([])\n",
+      "x7.shape =  torch.Size([])\n",
+      "x8.shape =  torch.Size([])\n",
+      "x9.shape =  torch.Size([])\n"
+     ]
+    }
+   ],
+   "source": [
+    "with pyroapi.pyro_backend(\"contrib.funsor\"), \\\n",
+    "        VectorizeMessenger(size=10):\n",
+    "    model(data, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And now in combination with `EnumMessenger`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "locs.shape = torch.Size([10, 1, 1, 1, 1, 3])\n",
+      "x0.shape =  torch.Size([3, 1, 1, 1, 1, 1])\n",
+      "x1.shape =  torch.Size([3, 1, 1, 1, 1, 1, 1])\n",
+      "x2.shape =  torch.Size([3, 1, 1, 1, 1, 1])\n",
+      "x3.shape =  torch.Size([3, 1, 1, 1, 1, 1, 1])\n",
+      "x4.shape =  torch.Size([3, 1, 1, 1, 1, 1])\n",
+      "x5.shape =  torch.Size([3, 1, 1, 1, 1, 1, 1])\n",
+      "x6.shape =  torch.Size([3, 1, 1, 1, 1, 1])\n",
+      "x7.shape =  torch.Size([3, 1, 1, 1, 1, 1, 1])\n",
+      "x8.shape =  torch.Size([3, 1, 1, 1, 1, 1])\n",
+      "x9.shape =  torch.Size([3, 1, 1, 1, 1, 1, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "with pyroapi.pyro_backend(\"contrib.funsor\"), \\\n",
+    "        VectorizeMessenger(size=10), EnumMessenger():\n",
+    "    model(data, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Computing an ELBO with variable elimination\n",
     "\n",
     "Now that we have tools for enumerating discrete variables and drawing batches of samples, we can use those to compute quantities of interest for inference algorithms.\n",
     "\n",
-    "Most inference algorithms in Pyro work with `pyro.poutine.Trace`s, custom data structures that contain parameters and sample site distributions and values and all of the associated metadata needed for inference computations. Our third effect handler `LogJointMessenger` departs from this design pattern, eliminating a tremendous amount of boilerplate in the process. It will build up a lazy Funsor expression for the logarithm of the joint probability density of a model. \n",
+    "Most inference algorithms in Pyro work with `pyro.poutine.Trace`s, custom data structures that contain parameters and sample site distributions and values and all of the associated metadata needed for inference computations. Our third effect handler `LogJointMessenger` departs from this design pattern, eliminating a tremendous amount of boilerplate in the process. It will automatically build up a lazy Funsor expression for the logarithm of the joint probability density of a model; when working with `Trace`s, this process must be triggered manually by calling `Trace.compute_log_probs()` and eagerly computing an objective from the resulting individual log-probability tensors in the trace.\n",
     "\n",
     "In our implementation of `LogJointMessenger`, unlike the previous two effect handlers, we will call `pyro.to_funsor` on both the sample value and the distribution to show how nearly all inference operations including log-probability density evaluation can be performed on `funsor.Funsor`s directly."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,21 +400,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And finally the actual loss function, which applies our three effect handlers to compute an expression for the log-density, marginalizes over discrete variables with `funsor.ops.logaddexp`, averages over Monte Carlo samples with `funsor.ops.add`, and evaluates the final lazy expression using Funsor's `optimize` interpretation for variable elimination."
+    "And finally the actual loss function, which applies our three effect handlers to compute an expression for the log-density, marginalizes over discrete variables with `funsor.ops.logaddexp`, averages over Monte Carlo samples with `funsor.ops.add`, and evaluates the final lazy expression using Funsor's `optimize` interpretation for variable elimination.\n",
+    "\n",
+    "Note that `log_z` exactly collapses the model's local discrete latent variables but is an ELBO wrt any continuous latent variables, and is thus equivalent to a simple version of `TraceEnum_ELBO` with an empty guide."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "@pyroapi.pyro_backend(\"contrib.funsor\")\n",
-    "def log_z(model, *args, size=10):\n",
+    "def log_z(model, model_args, size=10):\n",
     "    with LogJointMessenger() as tr, \\\n",
     "            VectorizeMessenger(size=size) as v, \\\n",
     "            EnumMessenger():\n",
-    "        model(*args)\n",
+    "        model(*model_args)\n",
     "\n",
     "    with funsor.interpreter.interpretation(funsor.terms.lazy):\n",
     "        prod_vars = frozenset({v.name})\n",
@@ -282,35 +442,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "locs torch.Size([10, 1, 1, 1, 1, 3])\n",
-      "x0 torch.Size([3, 1, 1, 1, 1, 1])\n",
-      "x1 torch.Size([3, 1, 1, 1, 1, 1, 1])\n",
-      "x2 torch.Size([3, 1, 1, 1, 1, 1])\n",
-      "x3 torch.Size([3, 1, 1, 1, 1, 1, 1])\n",
-      "x4 torch.Size([3, 1, 1, 1, 1, 1])\n",
-      "x5 torch.Size([3, 1, 1, 1, 1, 1, 1])\n",
-      "x6 torch.Size([3, 1, 1, 1, 1, 1])\n",
-      "x7 torch.Size([3, 1, 1, 1, 1, 1, 1])\n",
-      "x8 torch.Size([3, 1, 1, 1, 1, 1])\n",
-      "x9 torch.Size([3, 1, 1, 1, 1, 1, 1])\n",
-      "tensor(-133.6274, grad_fn=<AddBackward0>) (tensor([[ 6.6364, -4.3153, -2.3211],\n",
-      "        [-0.8893, -0.0196,  0.9089],\n",
-      "        [ 0.5422, -2.5592,  2.0170]]), tensor([10.4256,  5.0803, 13.3189]))\n"
+      "tensor(-133.6274, grad_fn=<AddBackward0>)\n",
+      "tensor(-129.2379, grad_fn=<AddBackward0>)\n",
+      "tensor(-125.9609, grad_fn=<AddBackward0>)\n",
+      "tensor(-123.7484, grad_fn=<AddBackward0>)\n",
+      "tensor(-122.3034, grad_fn=<AddBackward0>)\n"
      ]
     }
    ],
    "source": [
-    "data = [torch.tensor(1.)] * 10\n",
-    "log_marginal = log_z(model, data)\n",
-    "params = [pyro.param(\"probs\").unconstrained(), pyro.param(\"locs_mean\").unconstrained()]\n",
-    "print(log_marginal, torch.autograd.grad(log_marginal, params))"
+    "with pyroapi.pyro_backend(\"contrib.funsor\"):\n",
+    "    model(data, verbose=False)  # initialize parameters\n",
+    "    params = [pyro.param(\"probs\").unconstrained(), pyro.param(\"locs_mean\").unconstrained()]\n",
+    "\n",
+    "optimizer = torch.optim.Adam(params, lr=0.1)\n",
+    "for step in range(5):\n",
+    "    optimizer.zero_grad()\n",
+    "    log_marginal = log_z(model, (data, False))\n",
+    "    (-log_marginal).backward()\n",
+    "    optimizer.step()\n",
+    "    print(log_marginal)"
    ]
   },
   {
