Update contrib.funsor to use new domain syntax

--- a/tutorial/source/contrib_funsor_intro_i.ipynb
+++ b/tutorial/source/contrib_funsor_intro_i.ipynb
@@ -162,12 +162,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x OrderedDict([('x', reals(2,))]) reals(2,)\n"
+      "x OrderedDict([('x', Reals[2])]) Reals[2]\n"
      ]
     }
    ],
    "source": [
-    "var_x = funsor.to_funsor(\"x\", output=funsor.reals(2))\n",
+    "var_x = funsor.to_funsor(\"x\", output=funsor.Reals[2])\n",
     "print(var_x, var_x.inputs, var_x.output)"
    ]
   },
@@ -192,10 +192,10 @@
      "output_type": "stream",
      "text": [
       "Ambiguous tensor: shape = torch.Size([3, 1, 2])\n",
-      "Case 1: inputs = OrderedDict(), output = reals(3, 1, 2)\n",
-      "Case 2: inputs = OrderedDict([('a', bint(3))]), output = reals(1, 2)\n",
-      "Case 3: inputs = OrderedDict([('a', bint(3))]), output = reals(2,)\n",
-      "Case 4: inputs = OrderedDict([('a', bint(3)), ('c', bint(2))]), output = reals()\n"
+      "Case 1: inputs = OrderedDict(), output = Reals[3,1,2]\n",
+      "Case 2: inputs = OrderedDict([('a', Bint[3, ])]), output = Reals[1,2]\n",
+      "Case 3: inputs = OrderedDict([('a', Bint[3, ])]), output = Reals[2]\n",
+      "Case 4: inputs = OrderedDict([('a', Bint[3, ]), ('c', Bint[2, ])]), output = Real\n"
      ]
     }
    ],
@@ -204,25 +204,25 @@
     "print(\"Ambiguous tensor: shape = {}\".format(ambiguous_tensor.shape))\n",
     "\n",
     "# case 1: treat all dimensions as output/event dimensions\n",
-    "funsor1 = funsor.to_funsor(ambiguous_tensor, output=funsor.reals(3, 1, 2))\n",
+    "funsor1 = funsor.to_funsor(ambiguous_tensor, output=funsor.Reals[3, 1, 2])\n",
     "print(\"Case 1: inputs = {}, output = {}\".format(funsor1.inputs, funsor1.output))\n",
     "\n",
     "# case 2: treat the leftmost dimension as a batch dimension\n",
     "# note that dimension -1 in dim_to_name here refers to the rightmost *batch dimension*,\n",
     "# i.e. dimension -3 of ambiguous_tensor, the rightmost dimension not included in the output shape.\n",
-    "funsor2 = funsor.to_funsor(ambiguous_tensor, output=funsor.reals(1, 2), dim_to_name={-1: \"a\"})\n",
+    "funsor2 = funsor.to_funsor(ambiguous_tensor, output=funsor.Reals[1, 2], dim_to_name={-1: \"a\"})\n",
     "print(\"Case 2: inputs = {}, output = {}\".format(funsor2.inputs, funsor2.output))\n",
     "\n",
     "# case 3: treat the leftmost 2 dimensions as batch dimensions; empty batch dimensions are ignored\n",
     "# note that dimensions -1 and -2 in dim_to_name here refer to the rightmost *batch dimensions*,\n",
     "# i.e. dimensions -2 and -3 of ambiguous_tensor, the rightmost dimensions not included in the output shape.\n",
-    "funsor3 = funsor.to_funsor(ambiguous_tensor, output=funsor.reals(2), dim_to_name={-1: \"b\", -2: \"a\"})\n",
+    "funsor3 = funsor.to_funsor(ambiguous_tensor, output=funsor.Reals[2], dim_to_name={-1: \"b\", -2: \"a\"})\n",
     "print(\"Case 3: inputs = {}, output = {}\".format(funsor3.inputs, funsor3.output))\n",
     "\n",
     "# case 4: treat all dimensions as batch dimensions; empty batch dimensions are ignored\n",
     "# note that dimensions -1, -2 and -3 in dim_to_name here refer to the rightmost *batch dimensions*,\n",
     "# i.e. dimensions -1, -2 and -3 of ambiguous_tensor, the rightmost dimensions not included in the output shape.\n",
-    "funsor4 = funsor.to_funsor(ambiguous_tensor, output=funsor.reals(), dim_to_name={-1: \"c\", -2: \"b\", -3: \"a\"})\n",
+    "funsor4 = funsor.to_funsor(ambiguous_tensor, output=funsor.Real, dim_to_name={-1: \"c\", -2: \"b\", -3: \"a\"})\n",
     "print(\"Case 4: inputs = {}, output = {}\".format(funsor4.inputs, funsor4.output))"
    ]
   },
@@ -242,7 +242,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ambiguous funsor: inputs = OrderedDict([('a', bint(3)), ('b', bint(2))]), shape = reals()\n",
+      "Ambiguous funsor: inputs = OrderedDict([('a', Bint[3, ]), ('b', Bint[2, ])]), shape = Real\n",
       "Case 1: shape = torch.Size([3, 2])\n",
       "Case 2: shape = torch.Size([3, 1, 2])\n",
       "Case 3: shape = torch.Size([2, 3])\n"
@@ -250,7 +250,7 @@
     }
    ],
    "source": [
-    "ambiguous_funsor = funsor.Tensor(torch.zeros((3, 2)), OrderedDict(a=funsor.bint(3), b=funsor.bint(2)), 'real')\n",
+    "ambiguous_funsor = funsor.Tensor(torch.zeros((3, 2)), OrderedDict(a=funsor.Bint[3], b=funsor.Bint[2]), 'real')\n",
     "print(\"Ambiguous funsor: inputs = {}, shape = {}\".format(ambiguous_funsor.inputs, ambiguous_funsor.output))\n",
     "\n",
     "# case 1: the simplest version\n",
@@ -282,26 +282,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OrderedDict([('x', -1)]) OrderedDict([('x', bint(2))]) torch.Size([2])\n",
-      "OrderedDict([('x', -1), ('y', -2)]) OrderedDict([('y', bint(3)), ('x', bint(2))]) torch.Size([3, 2])\n",
-      "OrderedDict([('x', -1), ('y', -2), ('z', -3)]) OrderedDict([('z', bint(2)), ('y', bint(3))]) torch.Size([2, 3, 1])\n"
+      "OrderedDict([('x', -1)]) OrderedDict([('x', Bint[2, ])]) torch.Size([2])\n",
+      "OrderedDict([('x', -1), ('y', -2)]) OrderedDict([('y', Bint[3, ]), ('x', Bint[2, ])]) torch.Size([3, 2])\n",
+      "OrderedDict([('x', -1), ('y', -2), ('z', -3)]) OrderedDict([('z', Bint[2, ]), ('y', Bint[3, ])]) torch.Size([2, 3, 1])\n"
      ]
     }
    ],
    "source": [
     "name_to_dim = OrderedDict()\n",
     "\n",
-    "funsor_x = funsor.Tensor(torch.ones((2,)), OrderedDict(x=funsor.bint(2)), 'real')\n",
+    "funsor_x = funsor.Tensor(torch.ones((2,)), OrderedDict(x=funsor.Bint[2]), 'real')\n",
     "name_to_dim.update({\"x\": -1})\n",
     "tensor_x = funsor.to_data(funsor_x, name_to_dim=name_to_dim)\n",
     "print(name_to_dim, funsor_x.inputs, tensor_x.shape)\n",
     "\n",
-    "funsor_y = funsor.Tensor(torch.ones((3, 2)), OrderedDict(y=funsor.bint(3), x=funsor.bint(2)), 'real')\n",
+    "funsor_y = funsor.Tensor(torch.ones((3, 2)), OrderedDict(y=funsor.Bint[3], x=funsor.Bint[2]), 'real')\n",
     "name_to_dim.update({\"y\": -2})\n",
     "tensor_y = funsor.to_data(funsor_y, name_to_dim=name_to_dim)\n",
     "print(name_to_dim, funsor_y.inputs, tensor_y.shape)\n",
     "\n",
-    "funsor_z = funsor.Tensor(torch.ones((2, 3)), OrderedDict(z=funsor.bint(2), y=funsor.bint(3)), 'real')\n",
+    "funsor_z = funsor.Tensor(torch.ones((2, 3)), OrderedDict(z=funsor.Bint[2], y=funsor.Bint[3]), 'real')\n",
     "name_to_dim.update({\"z\": -3})\n",
     "tensor_z = funsor.to_data(funsor_z, name_to_dim=name_to_dim)\n",
     "print(name_to_dim, funsor_z.inputs, tensor_z.shape)"
@@ -323,23 +323,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OrderedDict([('x', bint(2))]) torch.Size([2, 1, 1, 1, 1])\n",
-      "OrderedDict([('y', bint(3)), ('x', bint(2))]) torch.Size([3, 2, 1, 1, 1, 1])\n",
-      "OrderedDict([('z', bint(2)), ('y', bint(3))]) torch.Size([2, 3, 1, 1, 1, 1, 1])\n"
+      "OrderedDict([('x', Bint[2, ])]) torch.Size([2, 1, 1, 1, 1])\n",
+      "OrderedDict([('y', Bint[3, ]), ('x', Bint[2, ])]) torch.Size([3, 2, 1, 1, 1, 1])\n",
+      "OrderedDict([('z', Bint[2, ]), ('y', Bint[3, ])]) torch.Size([2, 3, 1, 1, 1, 1, 1])\n"
      ]
     }
    ],
    "source": [
     "with pyroapi.pyro_backend(\"contrib.funsor\"), handlers.named():\n",
-    "    funsor_x = funsor.Tensor(torch.ones((2,)), OrderedDict(x=funsor.bint(2)), 'real')\n",
+    "    funsor_x = funsor.Tensor(torch.ones((2,)), OrderedDict(x=funsor.Bint[2]), 'real')\n",
     "    tensor_x = pyro.to_data(funsor_x)\n",
     "    print(funsor_x.inputs, tensor_x.shape)\n",
     "\n",
-    "    funsor_y = funsor.Tensor(torch.ones((3, 2)), OrderedDict(y=funsor.bint(3), x=funsor.bint(2)), 'real')\n",
+    "    funsor_y = funsor.Tensor(torch.ones((3, 2)), OrderedDict(y=funsor.Bint[3], x=funsor.Bint[2]), 'real')\n",
     "    tensor_y = pyro.to_data(funsor_y)\n",
     "    print(funsor_y.inputs, tensor_y.shape)\n",
     "\n",
-    "    funsor_z = funsor.Tensor(torch.ones((2, 3)), OrderedDict(z=funsor.bint(2), y=funsor.bint(3)), 'real')\n",
+    "    funsor_z = funsor.Tensor(torch.ones((2, 3)), OrderedDict(z=funsor.Bint[2], y=funsor.Bint[3]), 'real')\n",
     "    tensor_z = pyro.to_data(funsor_z)\n",
     "    print(funsor_z.inputs, tensor_z.shape)"
    ]
@@ -360,26 +360,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'funsor.tensor.Tensor'> OrderedDict([('batch', bint(3))]) reals()\n",
-      "<class 'funsor.tensor.Tensor'> OrderedDict([('x', bint(4))]) reals()\n",
+      "<class 'funsor.tensor.Tensor'> OrderedDict([('batch', Bint[3, ])]) Real\n",
+      "<class 'funsor.tensor.Tensor'> OrderedDict([('x', Bint[4, ])]) Real\n",
       "<class 'pyro.distributions.torch.Bernoulli'> torch.Size([3, 1, 1, 1, 1])\n",
-      "<class 'funsor.tensor.Tensor'> OrderedDict([('x', bint(4)), ('batch', bint(3))]) reals()\n"
+      "<class 'funsor.tensor.Tensor'> OrderedDict([('x', Bint[4, ]), ('batch', Bint[3, ])]) Real\n"
      ]
     }
    ],
    "source": [
     "with pyroapi.pyro_backend(\"contrib.funsor\"), handlers.named():\n",
     "    \n",
-    "    probs = funsor.Tensor(torch.tensor([0.5, 0.4, 0.7]), OrderedDict(batch=funsor.bint(3)))\n",
+    "    probs = funsor.Tensor(torch.tensor([0.5, 0.4, 0.7]), OrderedDict(batch=funsor.Bint[3]))\n",
     "    print(type(probs), probs.inputs, probs.output)\n",
     "    \n",
-    "    x = funsor.Tensor(torch.tensor([0., 1., 0., 1.]), OrderedDict(x=funsor.bint(4)))\n",
+    "    x = funsor.Tensor(torch.tensor([0., 1., 0., 1.]), OrderedDict(x=funsor.Bint[4]))\n",
     "    print(type(x), x.inputs, x.output)\n",
     "    \n",
     "    dx = dist.Bernoulli(pyro.to_data(probs))\n",
     "    print(type(dx), dx.shape())\n",
     "    \n",
-    "    px = pyro.to_funsor(dx.log_prob(pyro.to_data(x)), output=funsor.reals())\n",
+    "    px = pyro.to_funsor(dx.log_prob(pyro.to_data(x)), output=funsor.Real)\n",
     "    print(type(px), px.inputs, px.output)"
    ]
   },
@@ -399,18 +399,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x:  <class 'funsor.tensor.Tensor'> OrderedDict([('x', bint(2))]) reals()\n",
-      "px:  <class 'funsor.tensor.Tensor'> OrderedDict([('x', bint(2)), ('y', bint(3))]) reals()\n"
+      "x:  <class 'funsor.tensor.Tensor'> OrderedDict([('x', Bint[2, ])]) Real\n",
+      "px:  <class 'funsor.tensor.Tensor'> OrderedDict([('x', Bint[2, ]), ('y', Bint[3, ])]) Real\n"
      ]
     }
    ],
    "source": [
     "with pyroapi.pyro_backend(\"contrib.funsor\"), handlers.named():\n",
     "    \n",
-    "    x = pyro.to_funsor(torch.tensor([0., 1.]), funsor.reals(), dim_to_name={-1: \"x\"})\n",
+    "    x = pyro.to_funsor(torch.tensor([0., 1.]), funsor.Real, dim_to_name={-1: \"x\"})\n",
     "    print(\"x: \", type(x), x.inputs, x.output)\n",
     "    \n",
-    "    px = pyro.to_funsor(torch.ones(2, 3), funsor.reals(), dim_to_name={-2: \"x\", -1: \"y\"})\n",
+    "    px = pyro.to_funsor(torch.ones(2, 3), funsor.Real, dim_to_name={-2: \"x\", -1: \"y\"})\n",
     "    print(\"px: \", type(px), px.inputs, px.output)"
    ]
   },
@@ -452,7 +452,7 @@
    "source": [
     "with pyroapi.pyro_backend(\"contrib.funsor\"), handlers.named():\n",
     "    for i in pyro.markov(range(10)):\n",
-    "        x = pyro.to_data(funsor.Tensor(torch.tensor([0., 1.]), OrderedDict({\"x{}\".format(i): funsor.bint(2)})))\n",
+    "        x = pyro.to_data(funsor.Tensor(torch.tensor([0., 1.]), OrderedDict({\"x{}\".format(i): funsor.Bint[2]})))\n",
     "        print(\"Shape of x[{}]: \".format(str(i)), x.shape)"
    ]
   },
@@ -495,7 +495,7 @@
    "source": [
     "with pyroapi.pyro_backend(\"contrib.funsor\"), handlers.named():\n",
     "    for i in pyro.markov(range(10), history=2):\n",
-    "        x = pyro.to_data(funsor.Tensor(torch.tensor([0., 1.]), OrderedDict({\"x{}\".format(i): funsor.bint(2)})))\n",
+    "        x = pyro.to_data(funsor.Tensor(torch.tensor([0., 1.]), OrderedDict({\"x{}\".format(i): funsor.Bint[2]})))\n",
     "        print(\"Shape of x[{}]: \".format(str(i)), x.shape)"
    ]
   },
@@ -519,7 +519,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New global dimension:  OrderedDict([('n', bint(10))]) torch.Size([10, 1, 1, 1, 1])\n"
+      "New global dimension:  OrderedDict([('n', Bint[10, ])]) torch.Size([10, 1, 1, 1, 1])\n"
      ]
     }
    ],
@@ -527,7 +527,7 @@
     "from pyro.contrib.funsor.handlers.runtime import _DIM_STACK, DimType\n",
     "\n",
     "with pyroapi.pyro_backend(\"contrib.funsor\"), handlers.named():\n",
-    "    funsor_particle_ids = funsor.Tensor(torch.arange(10), OrderedDict(n=funsor.bint(10)))\n",
+    "    funsor_particle_ids = funsor.Tensor(torch.arange(10), OrderedDict(n=funsor.Bint[10]))\n",
     "    tensor_particle_ids = pyro.to_data(funsor_particle_ids, dim_type=DimType.GLOBAL)\n",
     "    print(\"New global dimension: \", funsor_particle_ids.inputs, tensor_particle_ids.shape)"
    ]
@@ -548,9 +548,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New global dimension:  OrderedDict([('plate1', bint(10))]) torch.Size([10, 1, 1, 1, 1])\n",
-      "Another new global dimension:  OrderedDict([('plate2', bint(9))]) torch.Size([9, 1, 1, 1, 1, 1])\n",
-      "A third new global dimension after recycling:  OrderedDict([('plate3', bint(10))]) torch.Size([10, 1, 1, 1, 1])\n"
+      "New global dimension:  OrderedDict([('plate1', Bint[10, ])]) torch.Size([10, 1, 1, 1, 1])\n",
+      "Another new global dimension:  OrderedDict([('plate2', Bint[9, ])]) torch.Size([9, 1, 1, 1, 1, 1])\n",
+      "A third new global dimension after recycling:  OrderedDict([('plate3', Bint[10, ])]) torch.Size([10, 1, 1, 1, 1])\n"
      ]
     }
    ],
@@ -559,17 +559,17 @@
     "\n",
     "with pyroapi.pyro_backend(\"contrib.funsor\"), handlers.named():\n",
     "    \n",
-    "    funsor_plate1_ids = funsor.Tensor(torch.arange(10), OrderedDict(plate1=funsor.bint(10)))\n",
+    "    funsor_plate1_ids = funsor.Tensor(torch.arange(10), OrderedDict(plate1=funsor.Bint[10]))\n",
     "    tensor_plate1_ids = pyro.to_data(funsor_plate1_ids, dim_type=DimType.GLOBAL)\n",
     "    print(\"New global dimension: \", funsor_plate1_ids.inputs, tensor_plate1_ids.shape)\n",
     "    \n",
-    "    funsor_plate2_ids = funsor.Tensor(torch.arange(9), OrderedDict(plate2=funsor.bint(9)))\n",
+    "    funsor_plate2_ids = funsor.Tensor(torch.arange(9), OrderedDict(plate2=funsor.Bint[9]))\n",
     "    tensor_plate2_ids = pyro.to_data(funsor_plate2_ids, dim_type=DimType.GLOBAL)\n",
     "    print(\"Another new global dimension: \", funsor_plate2_ids.inputs, tensor_plate2_ids.shape)\n",
     "    \n",
     "    del _DIM_STACK.global_frame[\"plate1\"]\n",
     "    \n",
-    "    funsor_plate3_ids = funsor.Tensor(torch.arange(10), OrderedDict(plate3=funsor.bint(10)))\n",
+    "    funsor_plate3_ids = funsor.Tensor(torch.arange(10), OrderedDict(plate3=funsor.Bint[10]))\n",
     "    tensor_plate3_ids = pyro.to_data(funsor_plate1_ids, dim_type=DimType.GLOBAL)\n",
     "    print(\"A third new global dimension after recycling: \", funsor_plate3_ids.inputs, tensor_plate3_ids.shape)"
    ]
@@ -601,9 +601,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor with new local dimension:  OrderedDict([('k', bint(9))]) torch.Size([9, 1])\n",
-      "Tensor with new global dimension:  OrderedDict([('n', bint(10))]) torch.Size([10, 1, 1])\n",
-      "Tensor with new visible dimension:  OrderedDict([('m', bint(11))]) torch.Size([11])\n"
+      "Tensor with new local dimension:  OrderedDict([('k', Bint[9, ])]) torch.Size([9, 1])\n",
+      "Tensor with new global dimension:  OrderedDict([('n', Bint[10, ])]) torch.Size([10, 1, 1])\n",
+      "Tensor with new visible dimension:  OrderedDict([('m', Bint[11, ])]) torch.Size([11])\n"
      ]
     },
     {
@@ -622,15 +622,15 @@
     "\n",
     "with pyroapi.pyro_backend(\"contrib.funsor\"), handlers.named():\n",
     "    \n",
-    "    funsor_local_ids = funsor.Tensor(torch.arange(9), OrderedDict(k=funsor.bint(9)))\n",
+    "    funsor_local_ids = funsor.Tensor(torch.arange(9), OrderedDict(k=funsor.Bint[9]))\n",
     "    tensor_local_ids = pyro.to_data(funsor_local_ids, dim_type=DimType.LOCAL)\n",
     "    print(\"Tensor with new local dimension: \", funsor_local_ids.inputs, tensor_local_ids.shape)\n",
     "    \n",
-    "    funsor_global_ids = funsor.Tensor(torch.arange(10), OrderedDict(n=funsor.bint(10)))\n",
+    "    funsor_global_ids = funsor.Tensor(torch.arange(10), OrderedDict(n=funsor.Bint[10]))\n",
     "    tensor_global_ids = pyro.to_data(funsor_global_ids, dim_type=DimType.GLOBAL)\n",
     "    print(\"Tensor with new global dimension: \", funsor_global_ids.inputs, tensor_global_ids.shape)\n",
     "    \n",
-    "    funsor_data_ids = funsor.Tensor(torch.arange(11), OrderedDict(m=funsor.bint(11)))\n",
+    "    funsor_data_ids = funsor.Tensor(torch.arange(11), OrderedDict(m=funsor.Bint[11]))\n",
     "    tensor_data_ids = pyro.to_data(funsor_data_ids, dim_type=DimType.VISIBLE)\n",
     "    print(\"Tensor with new visible dimension: \", funsor_data_ids.inputs, tensor_data_ids.shape)\n",
     "    \n",
