--- a/tutorial/source/contrib_funsor_intro_ii.ipynb
+++ b/tutorial/source/contrib_funsor_intro_ii.ipynb
@@ -173,7 +173,7 @@
     "        # as the name for this positional dimension, and sample site names must be unique.\n",
     "        funsor_value = pyro.to_funsor(\n",
     "            raw_value,\n",
-    "            output=funsor.bint(raw_value.shape[0]),\n",
+    "            output=funsor.Bint[raw_value.shape[0]],\n",
     "            dim_to_name={-raw_value.dim(): msg[\"name\"]},\n",
     "        )\n",
     "\n",
@@ -195,7 +195,7 @@
     "\n",
     "For example, in `EnumMessenger`, we might instead call `pyro.to_funsor` on `msg[\"fn\"]`:\n",
     "```py\n",
-    "funsor_dist = pyro.to_funsor(msg[\"fn\"], output=funsor.reals())(value=msg[\"name\"])\n",
+    "funsor_dist = pyro.to_funsor(msg[\"fn\"], output=funsor.Real)(value=msg[\"name\"])\n",
     "# enumerate_support defined whenever isinstance(funsor_dist, funsor.distribution.Distribution)\n",
     "funsor_value = funsor_dist.enumerate_support(expand=False)\n",
     "raw_value = pyro.to_data(funsor_value)\n",
@@ -267,7 +267,7 @@
     "        # we'll first draw a raw batch of samples similarly to EnumMessenger.\n",
     "        # However, since we are drawing a single batch from the joint distribution,\n",
     "        # we don't need to take multiple samples if the site is already batched.\n",
-    "        if self.name in pyro.to_funsor(msg[\"fn\"], funsor.reals()).inputs:\n",
+    "        if self.name in pyro.to_funsor(msg[\"fn\"], funsor.Real).inputs:\n",
     "            raw_value = msg[\"fn\"].rsample()\n",
     "        else:\n",
     "            raw_value = msg[\"fn\"].rsample(sample_shape=(self.size,))\n",
@@ -277,7 +277,7 @@
     "        fresh_dim = len(msg[\"fn\"].event_shape) - raw_value.dim()\n",
     "        funsor_value = pyro.to_funsor(\n",
     "            raw_value,\n",
-    "            output=funsor.reals(*msg[\"fn\"].event_shape),\n",
+    "            output=funsor.Reals[tuple(msg[\"fn\"].event_shape)],\n",
     "            dim_to_name={fresh_dim: DimRequest(value=self.name, dim_type=DimType.GLOBAL)},\n",
     "        )\n",
     "        \n",
@@ -391,7 +391,7 @@
     "            return\n",
     "        \n",
     "        with funsor.interpreter.interpretation(funsor.terms.lazy):\n",
-    "            funsor_dist = pyro.to_funsor(msg[\"fn\"], output=funsor.reals())\n",
+    "            funsor_dist = pyro.to_funsor(msg[\"fn\"], output=funsor.Real)\n",
     "            funsor_value = pyro.to_funsor(msg[\"value\"], output=funsor_dist.inputs[\"value\"])\n",
     "            self.log_joint += funsor_dist(value=funsor_value)"
    ]
